--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Plugins/Grid"]
 	path = Plugins/Grid
-	url = https://github.com/jinyuliao/Grid.git
+	url = https://github.com/ganondev/navigable-grid
